# docflow-kz

./: .env.example  .gitattributes  .gitignore  README.md  docflow-kz.tar_1  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_public_initial.py  0002_tenant_documents.py  0003_tenant_reports.py  0004_tenant_imports.py  0005_tenant_tasks.py  0006_tenant_board_config.py  0007_board_is_done.py  0008_tenant_activity.py  0009_tenant_boards_and_task_updates.py
backend/app/: main.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: auth.py  board_config.py  boards.py  documents.py  imports.py  organizations.py  reports.py  tasks.py  telegram.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: activity.py  auth.py  board_config.py  boards.py  documents.py  imports.py  reports.py  tasks.py
backend/app/schemas/: auth.py  documents.py  imports.py  reports.py  tasks.py
backend/app/services/: activity_service.py  auth_service.py  document_service.py  import_service.py  report_service.py  storage_service.py  task_service.py  telegram_service.py  telegram_state.py
backend/app/services/generators/: excel_generator.py  pdf_generator.py
backend/app/tasks/: celery_app.py  notification_tasks.py  report_tasks.py
backend/scripts/: migrate_assignees.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  boards.ts  client.ts  dashboard.ts  documents.ts  imports.ts  reports.ts  tasks.ts  users.ts
frontend/src/components/common/: ProtectedRoute.tsx
frontend/src/components/documents/: TemplateFieldsEditor.tsx
frontend/src/i18n/: index.ts
frontend/src/store/: authStore.ts  themeStore.ts
frontend/src/types/: index.ts
infra/postgres/: init.sql
(+13 files in other folders)
